k8s/deploy-test.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ahaythorus-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ahaythorus-test
  namespace: ahaythorus-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ahaythorus-test
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ahaythorus-test
        app.kubernetes.io/component: monitored-jvm
        a-haythorus.io/enabled: "true"
    spec:
      serviceAccountName: ahaythorus
      shareProcessNamespace: true

      containers:
        - name: dummy-java-app
          image: ahaythorus-dummy-app:dev
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 2Gi

        - name: a-haythorus
          image: a-haythorus:dev
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8899
              protocol: TCP

          volumeMounts:
            - name: shared-tmp
              mountPath: /tmp
            - name: ahaythorus-persistence
              mountPath: /data/ahaythorus

          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2

          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2

          resources:
            requests:
              cpu: 100m
              memory: 160Mi
            limits:
              cpu: "1"
              memory: 768Mi

      volumes:
        - name: shared-tmp
          emptyDir: {}
        - name: ahaythorus-persistence
          persistentVolumeClaim:
            claimName: ahaythorus-persistence

---
apiVersion: v1
kind: Service
metadata:
  name: ahaythorus-test-ui
  namespace: ahaythorus-test
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: ahaythorus-test

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ahaythorus
  namespace: ahaythorus-test
spec:
  ingressClassName: nginx

  rules:
    - host: ahaythorus.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ahaythorus-test-ui
                port:
                  number: 80
